--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,21 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.20.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.2",
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"mongoose": "^6.6.0",
+		"morgan": "^1.10.0",
+		"tsyringe": "^4.7.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/morgan": "^1.9.3",
 		"@types/node": "^18.7.16",
 		"nodemon": "^2.0.19",
+		"reflect-metadata": "^0.1.13",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.3"
 	}
