--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@mantine/dates": "^5.3.0",
     "@mantine/form": "^5.3.0",
     "@mantine/hooks": "^5.3.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/line": "^0.80.0",
     "@tabler/icons": "^1.95.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
